# tableau-document-schemas

./: CONTRIBUTING.md  README.md
schemas/2025_3/: twb_2025.3.0.xsd
tools/twb_builder/: .gitignore  README.md  pyproject.toml
tools/twb_builder/examples/: sales.csv  sales.plan.yaml
tools/twb_builder/tests/: conftest.py  test_cli.py  test_heuristics.py  test_readers.py  test_render_and_validate.py
tools/twb_builder/twb_builder/: __init__.py  cli.py  constants.py  errors.py
tools/twb_builder/twb_builder/datasource/: __init__.py  base.py  csv_reader.py  excel_reader.py  hyper_reader.py  inference.py  tds_reader.py
tools/twb_builder/twb_builder/llm/: __init__.py  augment.py  prompts.py
tools/twb_builder/twb_builder/plan/: __init__.py  heuristics.py  layout.py  schema.py
tools/twb_builder/twb_builder/render/: __init__.py  connections.py  dashboard.py  datasource.py  workbook.py  worksheet.py  xml_utils.py
tools/twb_builder/twb_builder/validate/: __init__.py  user_ns.xsd  xml_ns.xsd  xsd.py
